# graph-compiler

./: CMakeLists.txt
cmake/: imex-version.txt  imex.cmake
docs/GPU/: how_to_run_gpu_pipeline.md
include/gc/ExecutionEngine/GPURuntime/: GpuOclRuntime.h
include/gc/ExecutionEngine/OpenCLRuntime/: OpenCLRuntimeWrappers.h
include/gc/Transforms/: Passes.h  Passes.td  Transforms.h
include/gc/Transforms/Utils/: TransformUtils.h  ValueUtils.h
include/gc/Utils/: Error.h  Log.h
lib/gc/ExecutionEngine/Driver/: CMakeLists.txt
lib/gc/ExecutionEngine/GPURuntime/ocl/: CMakeLists.txt  GpuOclRuntime.cpp
lib/gc/ExecutionEngine/OpenCLRuntime/: CMakeLists.txt  OpenCLRuntimeWrappers.cpp
lib/gc/Transforms/: CMakeLists.txt  IterativeTilingAndFusion.cpp  LinalgDeGeneralize.cpp  Pipeline.cpp  TileConsumerAndFuseProducers.cpp  TransformUtils.cpp
lib/gc/Transforms/GPU/: AllocsToSLM.cpp  CMakeLists.txt  GpuLoopTiling.cpp  GpuTilingAndFusion.cpp  GpuToGpuOcl.cpp  GpuUtils.h  HackyMaskPass.cpp  LinalgToXeGPU.cpp  Pipeline.cpp
lib/gc/Transforms/Utils/: ValueUtils.cpp
src/gc-opt/: CMakeLists.txt
test/mlir/test/gc/Transforms/GPU/: allocs-to-slm.mlir
test/mlir/test/gc/gpu-runner/: imex-gpu.pp  lit.local.cfg  mlp.mlir
test/mlir/unittests/ExecutionEngine/GPU/: GpuOclRuntimeTest.cpp
test/mlir/unittests/Transforms/GPU/: GpuUtilsTest.cpp
